--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -6,16 +6,24 @@
   justify-content: space-between;
 }
 
-.settingsSearchBar {
-  border-radius: 9999px;
+.settings .searchBar {
+  border-radius: 9999px 0 0 9999px;
   border: none;
   padding: 13px;
   background-color: #f0f0f0;
   max-width: 100px;
+}
+
+.settings .searchButton {
+  border-radius: 0 9999px 9999px 0;
+  border: none;
+  border-left: 1px solid #dedede;
+  padding: 13px;
+  background-color: #f0f0f0;
   margin-right: 10px;
 }
 
-.settingsButton {
+.settings .button {
   border-radius: 50%;
   border: none;
   width: 40px;
