--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,6 +20,10 @@
   font-size: 6rem;
 }
 
+.weather-date {
+  font-size: 0.5rem;
+}
+
 @media screen and (min-width: 768px) {
   .weather-description {
     font-size: 3rem;
@@ -30,11 +34,23 @@
   .weather-temperature {
     font-size: 10rem;
   }
+  .weather-date {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-container {
+    width: 40%;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+  }
 }
 
 .gradient-background {
   background-color: #1fc8db;
-  background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+  background-image: linear-gradient(145deg, #78cad2 0%, #62a8ac 51%, #5497a7 75%);
   position: absolute;
   top: 0;
   left: 0;
