--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -1,35 +1,72 @@
 .settings {
-  display: flex;
   max-width: 32rem;
   margin: 0 auto;
-  padding: 20px 35px;
+  padding: 35px 35px 20px;
+}
+
+.settingsContainer {
+  display: flex;
   justify-content: space-between;
 }
 
+.settings .searchBarError {
+  color: #808080;
+  margin-top: 12px;
+}
+
+.settings .searchBarContainer {
+  display: flex;
+  flex: 1;
+}
+
 .settings .searchBar {
-  border-radius: 9999px 0 0 9999px;
-  border: none;
+  border-radius: 5px 0 0 5px;
+  border: 2px solid #dfdfdf;
+  border-right: none;
   padding: 13px;
-  background-color: #f0f0f0;
-  max-width: 100px;
+  background-color: white;
+  width: 100%;
+  max-width: 70%;
+  color: #404040;
+  font-size: 16px;
 }
 
 .settings .searchButton {
-  border-radius: 0 9999px 9999px 0;
-  border: none;
-  border-left: 1px solid #dedede;
+  border-radius: 0 5px 5px 0;
+  border: 2px solid #78cad2;
+  border-left: none;
   padding: 13px;
-  background-color: #f0f0f0;
+  background-color: #78cad2;
   margin-right: 10px;
   cursor: pointer;
+  color: white;
+  font-size: 16px;
 }
 
 .settings .button {
   border-radius: 50%;
-  border: none;
-  width: 40px;
-  height: 40px;
-  background-color: #5d5d5d;
+  border: 2px solid #78cad2;
+  width: 50px;
+  height: 50px;
+  background-color: #78cad2;
   color: white;
   cursor: pointer;
+  font-size: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .settings {
+    max-width: 100%;
+    padding: 100px 100px 30px;
+  }
+  .settings .searchBar {
+    padding: 20px;
+  }
+  .settings .button {
+    width: 60px;
+    height: 60px;
+  }
+  .settings .searchButton {
+    padding: 20px;
+  }
 }
