--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -61,3 +61,16 @@
   width: 100%;
   z-index: -1;
 }
+
+.photo-attributes {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 20px;
+  color: white;
+}
+
+.photo-attributes a {
+  text-decoration: underline;
+  color: white;
+}
